--- a/project_Mean_iti/src/app/add-product/add-product.component.css
+++ b/project_Mean_iti/src/app/add-product/add-product.component.css
@@ -1,10 +1,10 @@
-body,
+/* body,
 html {
   margin:0p;
   padding: 0;
   font-family: "Poppins", sans-serif;
   font-size: 14px;
-}
+} */
 
 ul,
 ol {
