--- a/project_Mean_iti/src/app/all-products/all-products.component.css
+++ b/project_Mean_iti/src/app/all-products/all-products.component.css
@@ -137,17 +137,16 @@
     background-color: #B0D9B1;
    }
    .search-bar-container {
-    width: 60%;
-    position: absolute;
-    top: 20px;
-    left: 20%;
+     width:80%; 
+     margin: 0 200px;
+ 
   }
   input{
     border-radius: 25px;
     background-color: whitesmoke;
     border: 1px solid lightgray;
     outline: none;
-    margin-left: 20%;
+    margin-left: 10%;
     height:50px;
     font-size: larger;
   }
@@ -163,4 +162,13 @@
     margin-left: -35px;
     fill: #79AC78;
   }
+
+  
+  svg{
+    color: gold;
+    font-size: 13px;
+    }
+     .rate{
+    overflow: hidden;
+     }
   
