--- a/project_Mean_iti/src/app/app.component.html
+++ b/project_Mean_iti/src/app/app.component.html
@@ -1,8 +1,10 @@
 
 <div class="container-fluid">
     <app-header></app-header>
-    <router-outlet></router-outlet>
+    <router-outlet>
+
+    </router-outlet>
     
-    <!-- <app-add-product></app-add-product> -->
     <app-footer></app-footer>
+ 
   </div>
