--- a/project_Mean_iti/src/app/header/header.component.html
+++ b/project_Mean_iti/src/app/header/header.component.html
@@ -3,16 +3,6 @@
   <img src="https://cdn-icons-png.flaticon.com/128/807/807175.png" alt="logo" />
   <h1>Med<span>Life</span></h1>
 </div>
-<!-- <div class="container">
-  <input type="text" class="w-50 mt-3 p-2" [(ngModel)] = "searchValue" older = "Search..." #filter/> -->
-  <!-- <button (click)="search"><span id="search-icon"><svg xmlns="http://www.w3.org/2000/svg" height="1.5em" viewBox="0 0 512 512">! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc.<path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg></span></button> -->
-<!-- </div> -->
-<!-- <div class="login">
-  <a href="">
-    <img src="https://icon-library.com/images/guest-account-icon/guest-account-icon-17.jpg" alt="">
-    <span>Account</span><p>Login / Register</p>
-  </a>
-</div> -->
   <div class="head">
     <div class="login">
       <a routerLink="/login">
@@ -21,7 +11,7 @@
       </a>
     </div>
     <div class="cart">
-      <a href="">
+      <a routerLink="/cart">
         <img src="https://static.vecteezy.com/system/resources/previews/009/701/669/non_2x/shopping-bags-line-green-and-black-icon-vector.jpg"/>
         <div class="cart-text d-inline">
           <span>Cart</span>
@@ -34,7 +24,7 @@
 <nav class="navbar">
   <ul class="navbar-links" id="list-logo">
     <li class="navbar-dropdown">
-      <a href="#" class="navbar-logo"
+      <a routerLink="/" class="navbar-logo"
       ><i class="material-icons">menu</i> Browse Categories</a>
       <div class="dropdown">
          <li class="nav-item" *ngFor="let item of allCategories">
@@ -60,7 +50,7 @@
       <a href="/products">Products</a>
     </li>
     <li class="nav-items">
-      <a href="#">Contact</a>
+      <a href="/contactUs">Contact</a>
     </li>
     <li class="nav-items">
       <a href="#about">About Us</a>
